--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,50 +1,45 @@
+<h1>
+  <%= @the_board.name %>
+</h1>
+
 <div>
   <div>
-    <h1>
-      Board #<%= @the_board.id %> details
-    </h1>
+    <a href="/boards">
+      Go back
+    </a>
+  </div>
 
-    <div>
-      <div>
-        <a href="/boards">
-          Go back
-        </a>
-      </div>
-
-      <div>
-        <a href="/delete_board/<%= @the_board.id %>">
-          Delete board
-        </a>
-      </div>
-    </div>
-
-    <dl>
-      <dt>
-        Name
-      </dt>
-      <dd>
-        <%= @the_board.name %>
-      </dd>
-
-      <dt>
-        Created at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@the_board.created_at) %> ago
-      </dd>
-
-      <dt>
-        Updated at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@the_board.updated_at) %> ago
-      </dd>
-    </dl>
+  <div>
+    <a href="/delete_board/<%= @the_board.id %>">
+      Delete board
+    </a>
   </div>
 </div>
 
-<hr>
+<dl>
+  <dt>
+    Name
+  </dt>
+  <dd>
+    <%= @the_board.name %>
+  </dd>
 
+  <dt>
+    Created at
+  </dt>
+  <dd>
+    <%= time_ago_in_words(@the_board.created_at) %> ago
+  </dd>
+
+  <dt>
+    Updated at
+  </dt>
+  <dd>
+    <%= time_ago_in_words(@the_board.updated_at) %> ago
+  </dd>
+</dl>
+
+<hr>
 
 <div>
   <div>
@@ -52,7 +47,7 @@
       Edit board
     </h2>
 
-    <form action="/modify_board/<%= @the_board.id %>"  method="post" >
+    <form action="/modify_board/<%= @the_board.id %>" method="post">
       <div>
         <label for="name_box">
           Name
@@ -69,3 +64,67 @@
 </div>
 
 <hr>
+
+<div>
+  <div>
+    <h2>
+      Add a new post
+    </h2>
+
+    <form action="/insert_post" method="post">
+      <div>
+        <label for="title_box">
+          Title
+        </label>
+
+        <input type="text" id="title_box" name="query_title">
+      </div>
+
+      <div>
+        <label for="body_box">
+          Body
+        </label>
+
+        <textarea id="body_box" name="query_body" rows="3"></textarea>
+      </div>
+
+      <div>
+        <label for="expires_on_box">
+          Expires on
+        </label>
+
+        <input type="date" id="expires_on_box" name="query_expires_on">
+      </div>
+
+      <input type="hidden" id="board_id_box" name="query_board_id" value="<%= @the_board.id %>">
+
+      <button>
+        Create post
+      </button>
+    </form>
+  </div>
+</div>
+
+<h2> Active Posts </h2>
+
+<dl>
+  <% @the_board.posts.each do |post| %>
+    <dt>Title</dt>
+    <dd><%= post.title %></dd>
+
+    <dt>Body</dt>
+    <dd><%= post.body %></dd>
+
+    <dt>Expires on</dt>
+    <dd><%= post.expires_on %></dd>
+
+    <dt>Board</dt>
+    <dd><%= post.board_id %></dd>
+
+    <dt>Created at</dt>
+    <dd><%= time_ago_in_words(post.created_at) %> ago</dd>
+
+    <dt>Updated at</dt>
+    <dd><%= time_ago_in_words(post.updated_at) %> ago</dd>
+  <% end %>
+</dl>
