--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -2,67 +2,6 @@
   <%= @the_board.name %>
 </h1>
 
-<div>
-  <div>
-    <a href="/boards">
-      Go back
-    </a>
-  </div>
-
-  <div>
-    <a href="/delete_board/<%= @the_board.id %>">
-      Delete board
-    </a>
-  </div>
-</div>
-
-<dl>
-  <dt>
-    Name
-  </dt>
-  <dd>
-    <%= @the_board.name %>
-  </dd>
-
-  <dt>
-    Created at
-  </dt>
-  <dd>
-    <%= time_ago_in_words(@the_board.created_at) %> ago
-  </dd>
-
-  <dt>
-    Updated at
-  </dt>
-  <dd>
-    <%= time_ago_in_words(@the_board.updated_at) %> ago
-  </dd>
-</dl>
-
-<hr>
-
-<div>
-  <div>
-    <h2>
-      Edit board
-    </h2>
-
-    <form action="/modify_board/<%= @the_board.id %>" method="post">
-      <div>
-        <label for="name_box">
-          Name
-        </label>
-
-        <input type="text" id="name_box" name="query_name" value="<%= @the_board.name %>">
-      </div>
-
-      <button>
-        Update board
-      </button>
-    </form>
-  </div>
-</div>
-
 <hr>
 
 <div>
@@ -95,11 +34,13 @@
 
         <input type="date" id="expires_on_box" name="query_expires_on">
       </div>
-
-      <input type="hidden" id="board_id_box" name="query_board_id" value="<%= @the_board.id %>">
+          
+      <div>
+        <input type="hidden" id="board_id_box" name="query_board_id" value="<%= @the_board.id %>">
+    </div>
 
       <button>
-        Create post
+        Add post
       </button>
     </form>
   </div>
